--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,10 @@ a {
   text-decoration: none;
 }
 
+.glass_bg {
+  background: rgba(2, 5, 31, 0.93);
+}
+
 * {
   box-sizing: border-box;
 }
@@ -23,8 +27,29 @@ a {
   font-family: 'Geostar', monospace;
 }
 
+.grotesk_font {
+  font-family: 'Grotesk', monospace;
+}
+
 .mono_font {
   font-family: 'Space Mono', monospace;
+}
+
+.app_cards_bg {
+  background: linear-gradient(0deg, rgba(2, 5, 31, 0.93) 0%, rgba(2, 5, 31, 0.93) 100%), linear-gradient(135deg, #80F2BC 4.17%, #CD31D0 44.27%, #1E30D1 83.33%);
+}
+
+.app_card_bg {
+  border: 1px solid rgba(3, 7, 46, 0.60);
+  background: var(--blue-70, #03093D);
+  box-shadow: 0px 20px 40px 0px rgba(0, 0, 0, 0.10);
+  backdrop-filter: blur(10px);
+}
+
+.card_border {
+  border-radius: 36px;
+  border: linear-gradient(135deg, rgba(58, 129, 191, 0.08) 0%, rgba(65, 48, 90, 0.03) 100%);
+  backdrop-filter: blur(12px);
 }
 
 .bgCol {
