--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,11 @@
   font-family: 'Space Mono', monospace;
 }
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 html,
 body {
   padding: 0;
