--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono&display=swap');
 
+.mono {
+  font-family: 'Space Mono', monospace;
+}
 
 html,
 body {
@@ -19,3 +23,4 @@ a {
 * {
   box-sizing: border-box;
 }
+
