--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,11 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono&display=swap');
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
+.mono {
+  font-family: 'Space Mono', monospace;
+}
 
 html,
 body {
