--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,18 @@ a {
   text-decoration: none;
 }
 
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 .glass_bg {
   background: rgba(2, 5, 31, 0.93);
 }
@@ -74,10 +86,18 @@ a {
   -webkit-text-fill-color: transparent;
 }
 
+.coin_bg {
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.20) 0%, rgba(0, 0, 0, 0.20) 100%), lightgray 50% / contain no-repeat;
+}
+
 .class {
   background: linear-gradient(135deg, rgba(255, 255, 255, 0.50) 0%, rgba(255, 255, 255, 0.20) 100%);
   box-shadow: 0px 20px 40px 0px rgba(0, 0, 0, 0.10);
   backdrop-filter: blur(10px);
+}
+
+.main_app_bg {
+  background: linear-gradient(0deg, rgba(130, 135, 174, 0.60) 0%, rgba(130, 135, 174, 0.60) 100%), linear-gradient(135deg, #80F2BC 12.24%, #1E30D1 89.76%);
 }
 
 .scrollbar-hide::-webkit-scrollbar {
